apps/homelab/network-optimizer/lottage/patch-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-optimizer
  namespace: apps
spec:
  selector:
    matchLabels:
      site: lottage
  template:
    metadata:
      labels:
        site: lottage
    spec:
      containers:
        - name: network-optimizer
---
apiVersion: v1
kind: Service
metadata:
  name: network-optimizer
  namespace: apps
spec:
  selector:
    app: network-optimizer
    site: lottage
