apps/homelab/network-optimizer/lottage/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: network-optimizer
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`network-optimizer-lottage.${HOSTNAME}`)
      kind: Rule
      services:
        - name: network-optimizer-lottage
          port: 8042
